# shadowbot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: activity.rs  db.rs  main.rs  permissions.rs
src/commands/: addrole.rs  advanced_tools.rs  alias.rs  alladmins.rs  allbots.rs  allperms.rs  autobackup.rs  autoconfiglog.rs  automod_service.rs  autopublish.rs  autoreact.rs  backup.rs  ban.rs  banlist.rs  banner.rs  bl.rs  blinfo.rs  boostembed.rs  boosters.rs  boostlog.rs  botadmins.rs  botconfig_common.rs  bringall.rs  button.rs  calc.rs  change.rs  changeall.rs  channel.rs  choose.rs  cleanup.rs  clear_all_sanctions.rs  clear_bl.rs  clear_messages.rs  clear_owners.rs  clear_perms.rs  clear_sanctions.rs  cmute.rs  command_contract.rs  common.rs  compet.rs  (+99 more)
src/events/: auto_moderation_action_execution.rs  auto_moderation_rule_create.rs  auto_moderation_rule_delete.rs  auto_moderation_rule_update.rs  channel_create.rs  channel_delete.rs  channel_event.rs  channel_pins_update.rs  channel_update.rs  guild_ban_addition.rs  guild_ban_removal.rs  guild_create.rs  guild_integrations_update.rs  guild_member_addition.rs  guild_member_event.rs  guild_member_removal.rs  guild_member_update.rs  guild_scheduled_event_create.rs  guild_scheduled_event_delete.rs  guild_scheduled_event_update.rs  guild_scheduled_event_user_add.rs  guild_scheduled_event_user_remove.rs  integration_create.rs  integration_delete.rs  integration_update.rs  interaction_create.rs  interaction_create_event.rs  invite_create.rs  invite_delete.rs  message.rs  (+28 more)
(+505 files in other folders)
